fix spacing in path selector

--- a/src/app/pathselector/pathselector.component.scss
+++ b/src/app/pathselector/pathselector.component.scss
@@ -6,16 +6,18 @@
 }
 
 .path-selector-empty {
-  position: relative;
-  width: 100%;
-  height: 100%;
   span {
     box-sizing: border-box;
-    padding: 32px;
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-bottom: 48px;
     color: $colorBlackTextDisabled;
     text-align: center;
     width: 100%;
     font-size: 16px;
+    br {
+      line-height: 125%;
+    }
   }
 }
 
